# mpdataaggregator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/common/: CMakeLists.txt
src/common/include/common/: Buffer.h  Core.h  Utils.h
src/common/src/: Buffer.cpp  Core.cpp  Utils.cpp
src/consumer/: CMakeLists.txt  main.cpp
src/producer/: CMakeLists.txt  main.cpp
